--- a/style.css
+++ b/style.css
@@ -170,6 +170,10 @@ h4{
     align-items: center;
 }
 
+.spacing {
+    margin: 50px;
+}
+
 #mine-bad-image {
     max-width: 20%;
     max-height: 20%;
