--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
 } */
 
 #navbar {
-    background-color:rgb(246, 246, 59);
+    background-color:darkslateblue;
     border-color: black;
-    height: 40px;
+    height: 30px;
     border-width: 5px;
     border-style: groove;
     
@@ -32,13 +32,13 @@
 
 a {
     font-size: 25px;
-    color: red;
+    color: deepskyblue;
     text-decoration: none;
 }
 
 a:hover {
     font-weight: bold;
-    color: darkblue; 
+    color: red; 
 }
 
 img {
